--- a/Task2/Task2.csproj
+++ b/Task2/Task2.csproj
@@ -45,8 +45,12 @@
     <Compile Include="BinaryFileRepository.cs" />
     <Compile Include="Book.cs" />
     <Compile Include="BookListService.cs" />
+    <Compile Include="ExportByLinq.cs" />
+    <Compile Include="ExportByWritter.cs" />
     <Compile Include="IBookRepository.cs" />
+    <Compile Include="IXmlFormatExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BookRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="NLog.config">
